--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ node_modules
 /dist
 
 
+#env files
+.env.development
+.env.production
+
 # local env files
 .env.local
 .env.*.local
@@ -21,3 +25,5 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+#config file
