--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "core-js": "^3.8.3",
+    "postcss": "^8.5.0",
+    "tailwindcss": "^3.4.17",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
   },
