--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "core-js": "^3.8.3",
     "postcss": "^8.5.0",
     "tailwindcss": "^3.4.17",
