--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postcss": "^8.5.0",
     "tailwindcss": "^3.4.17",
     "vue": "^2.6.14",
-    "vue-router": "^3.6.5"
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
